tests/snapshots/run_wpt_conformance__trtx_gather_float16_3D_tensor_and_2D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float16 3D tensor and 2D indices default options, trtx
 gather :: gather float16 3D tensor and 2D indices default options: index 0: actual=-66.0625 expected=10.828125 ulp=40331 tolerance=4
  inputs: gatherInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125, 41.9375, -1.1298828125, -50.40625, 90.3125, 55.625, 44.90625, 56.84375, 10.828125, -19.6875, -37.6875, 43.125, 0.9130859375, -7.69921875, 25.765625, 73.625]; gatherIndices: [2, 1, 1, 1] (constant)
  expected gatherOutput: [10.828125, -19.6875, -37.6875, 43.125, 0.91308594, -7.6992188, 25.765625, 73.625, 51.8125, 41.9375 ...] (len=32)
  actual gatherOutput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, -66.0625, -68.9375 ...] (len=32)
  expected gatherOutput full nd:
[10.828125, -19.6875, -37.6875, 43.125, 0.91308594, -7.6992188, 25.765625, 73.625, 51.8125, 41.9375, ...] (len=32, shape=[2, 2, 4, 2])
  actual gatherOutput full nd:
[-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, -66.0625, -68.9375, ...] (len=32, shape=[2, 2, 4, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f16[3, 4, 2];
  }

  consts {
    operand_0: i32[2, 2] @bytes([2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
