tests/snapshots/run_wpt_conformance__trtx_gather_float16_5D_tensor_and_0D_scalar_indices_options_axis_4.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float16 5D tensor and 0D scalar indices options.axis=4, trtx
 gather :: gather float16 5D tensor and 0D scalar indices options.axis=4: index 0: actual=-66.0625 expected=-68.9375 ulp=46 tolerance=4
  inputs: gatherInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125, 41.9375, -1.1298828125, -50.40625, 90.3125, 55.625, 44.90625, 56.84375, 10.828125, -19.6875, -37.6875, 43.125, 0.9130859375, -7.69921875, 25.765625, 73.625]; gatherIndices: [1] (constant)
  expected gatherOutput: [-68.9375, 89.0625, 48.8125, -1.1298828, 55.625, 10.828125, 43.125, 25.765625]
  actual gatherOutput: [-66.0625, -26.15625, 43.84375, 41.9375, 90.3125, 56.84375, -37.6875, -7.6992188]
  expected gatherOutput full nd:
(shape [4, 2, 1, 1])
  [-68.9375]
  [89.0625]
  [48.8125]
  [-1.1298828]
  [55.625]
  [10.828125]
  [43.125]
  [25.765625]
  actual gatherOutput full nd:
(shape [4, 2, 1, 1])
  [-66.0625]
  [-26.15625]
  [43.84375]
  [41.9375]
  [90.3125]
  [56.84375]
  [-37.6875]
  [-7.6992188]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f16[4, 2, 1, 1, 3];
  }

  consts {
    operand_0: i32[] @bytes([1, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=4, label="");
  }

  outputs { gatherOutput; }
}
